--- a/app/views/devise/_form.html.erb
+++ b/app/views/devise/_form.html.erb
@@ -16,6 +16,9 @@
   <label class="control-label" for="user[email]">Email</label>
   <div class="controls">
     <%= f.email_field :email, :class => "input-large" %>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
   </div>
 </div>
 <!-- Avatar -->
@@ -75,31 +78,10 @@
     <%= f.text_field :zip, :class => "input-large" %>
   </div>
 </div>   
-
 <!-- About -->
 <div class="control-group">
   <label class="control-label" for="user[about]">About</label>
   <div class="controls">
     <%= f.text_area :about, :class => "input-large" %>
-  </div>
-</div>                                                                                                                                      
-<!-- Username -->
-<div class="control-group">
-  <label class="control-label" for="user[username]">Username</label>
-  <div class="controls">
-    <%= f.text_field :username, :class => "input-large" %>
-  </div>
-</div>
-<!-- Password -->
-<div class="control-group">
-  <label class="control-label" for="user[password]">Password</label>
-  <div class="controls">
-    <%= f.password_field :password, :class => "input-large" %>
-  </div>
-</div>
-<div class="control-group">
-  <label class="control-label" for="user[password]">Retype Password</label>
-  <div class="controls">
-    <%= f.password_field :password_confirmation, :class => "input-large" %>
   </div>
 </div>
