--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,34 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
-
-<%= link_to "Back", :back %>
-
-<% provide(:title, "Register") %>
+<% provide(:title, "Edit Profile") %>
 <div class="content">
   <!-- Sidebar -->
   <%= render "shared/sidebar" %>
@@ -39,9 +9,9 @@
       <!-- Page heading -->
       <div class="page-head">
         <!-- Page heading -->
-        <h2 class="pull-left">Register
+        <h2 class="pull-left">Profile
           <!-- page meta -->
-          <span class="page-meta">Creating an account on Playmotrade is free and easy. Simply fill out the information below. You will recieve a confirmation by email.</span>
+          <span class="page-meta">Edit your personal settings. Store settings are edited through your store front.</span>
         </h2>
 
 
@@ -57,47 +27,61 @@
 
       </div>
       <!-- Page heading ends -->
-
-
-
       <!-- Matter -->
-
       <div class="matter">
         <div class="container-fluid">
 
           <div class="row-fluid">
 
             <div class="span12">
-              <% if devise_error_messages! %>
-                <div class="alert alert-error">
-                  <a class="close" href="#">×</a>
-                  <%= content_tag :p, devise_error_messages! %>
-                </div>
-              <% end %>
-
               <div class="widget wred">
                 <div class="widget-head">
-                  <div class="pull-left">Create a Member Profile</div>
+                  <div class="pull-left">Edit Your Profile</div>
                   <div class="clearfix"></div>
                 </div>
 
                 <div class="widget-content">
                   <div class="padd">
-                    
+                    <% if devise_error_messages!.present? %>
+                      <div class="alert alert-error">
+                        <%= devise_error_messages! %>
+                      </div>
+                    <% end %>
                     <!-- Profile form -->
-                   
                       <div class="form profile">
                         <!-- Edit profile form (not working)-->
-                        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal"}) do |f| %>
+                        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
                             <%= render partial: "form", locals: {f: f} %>
-                            <!-- Checkbox -->
+                           <!-- Username -->
                             <div class="control-group">
-                               <div class="controls">
-                                  <label class="checkbox inline">
-                                     <%= f.check_box :agrees_to_tos %> Agree with Terms and Conditions
-                                  </label>
-                               </div>
-                            </div> 
+                              <label class="control-label" for="user[username]">Username</label>
+                              <div class="controls">
+                                <%= f.text_field :username, :class => "input-large" %>
+                              </div>
+                            </div>
+                            <!-- Password -->
+                            <div class="control-group">
+                              <label class="control-label" for="user[password]">New Password</label>
+                              <div class="controls">
+                                <%= f.password_field :password, :class => "input-large" %>
+                                <span class="help-inline">Leave blank if you don't want to change it</span>
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="user[password]">Retype Password</label>
+                              <div class="controls">
+                                <%= f.password_field :password_confirmation, :class => "input-large" %>
+                              </div>
+                            </div>
+                            <div class="control-group">
+                              <label class="control-label" for="user[password]">Current Password</label>
+                              <div class="controls">
+                                <%= f.label :current_password, :class => "input-large" %>
+                                <span class="help-inline">We need your current password to confirm your changes</span>
+                              </div>
+                            </div>
+
+                            
                             <!-- Buttons -->
                             <div class="form-actions">
                                <!-- Buttons -->
@@ -106,6 +90,12 @@
                             </div>
                           
                           <% end %>
+
+                          <h3>Cancel my account</h3>
+
+                          <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+
+                          <%= link_to "Back", :back %>
                       </div>
 
                   </div>
