--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,6 +16,26 @@
                   <% end %>
                   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal", :multipart => true}) do |f| %>
                       <%= render partial: "form", locals: {f: f} %>
+                      <!-- Username -->
+                      <div class="control-group">
+                        <label class="control-label" for="user[username]">Username</label>
+                        <div class="controls">
+                          <%= f.text_field :username, :class => "input-large" %>
+                        </div>
+                      </div>
+                      <!-- Password -->
+                      <div class="control-group">
+                        <label class="control-label" for="user[password]">Password</label>
+                        <div class="controls">
+                          <%= f.password_field :password, :class => "input-large" %>
+                        </div>
+                      </div>
+                      <div class="control-group">
+                        <label class="control-label" for="user[password]">Retype Password</label>
+                        <div class="controls">
+                          <%= f.password_field :password_confirmation, :class => "input-large" %>
+                        </div>
+                      </div>
                       <!-- Checkbox -->
                       <div class="control-group">
                          <div class="controls">
